--- a/style.css
+++ b/style.css
@@ -1,32 +1,29 @@
-body{
-    background-color: #FFD9DA;
+body {
+    background-color: hsl(0%, 0%, 94%);
 }
 
 html {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
+    font-size: 16px;
 }
 
-
-
-.Top-Section{
+.Top-Section {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
 }
 
-.Top-Section img{
-    padding-top: 10px;
+.Top-Section img {
+    padding-top: 1.6rem;
     animation: heartbeat 1.5s ease-in-out infinite both;
+    margin: 1.25rem;
 }
-
-
 
 .navbar {
     display: flex;
-    gap: 30px;
-    padding-right: 30px;
+    gap: 1.875rem;
+    padding-right: 1.875rem;
 }
 
 .navbar a {
@@ -37,7 +34,7 @@ html {
 
 .navbar a h2 {
     margin: 0;
-    font-size: 20px;
+    font-size: 1.25rem;
     transition: color 0.3s ease;
 }
 
@@ -45,127 +42,110 @@ html {
     text-decoration: underline;
 }
 
-
-.heading{
+.heading {
     font-family: 'Great Vibes', cursive;
-    font-size: 90px;
+    font-size: 5.625rem;
     text-align: center;
+    margin-top: -1.25rem;
     animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
-/*About Us*/
-
-.About{
+/* About Us */
+.About {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 }
 
-
-.Intro{
-    background-color:  rgb(46, 20, 16);
-    width: 700px;
-    height: 200px;
-    border: 1px solid rgb(46, 20, 16);
-    border-radius: 31px;
-    box-shadow: 2px 5px 28px 0px rgb(46, 20, 16);
-    padding: 20px;
-    animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-    
+.Intro {
+    background-color: rgb(46, 20, 16);
+    width: 43.75rem;
+    height: 12.5rem;
+    border: 0.0625rem solid rgb(22, 7, 4);
+    border-radius: 1.9375rem;
+    box-shadow: 0.125rem 0.3125rem 1.75rem 0rem rgb(46, 20, 16);
+    padding: 1.25rem;
+    animation: myAnim 2s ease 0s 1 normal forwards;
 }
 
-.Intro h2{
-    color:  #FFD9DA;
-    padding-left: 20px;
+.Intro h2 {
+    color: #ffe7e8;
+    padding-left: 1.25rem;
+    font-weight: 900;
 }
 
-.Intro p{
+.Intro p {
     font-family: 'Lato', sans-serif;
     text-align: left;
-    color:  #FFD9DA;
-    padding-left: 20px;
-    letter-spacing: 2px;
-    word-spacing: 5px;
+    font-weight: 800;
+    color: #ffe7e8;
+    padding-left: 1.25rem;
+    letter-spacing: 0.125rem;
+    word-spacing: 0.3125rem;
 }
 
-.About img{
-    border: 1px solid  #FFD9DA;
-    border-radius: 10px;
-    box-shadow: 0px 1px 15px 1px #ffacdf;
-    animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
-}
-
-.cafe-img{
-    padding-right: 30px;
-}
-
-
-/*Menu*/
-
-.Menu h1{
+/* Menu */
+.Menu h1 {
     font-family: 'Great Vibes', cursive;
-    font-size: 70px;
+    font-size: 4.375rem;
     text-align: center;
     color: rgb(46, 20, 16);
 }
 
-.menu-items{
+.menu-items {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
 
-.menu-items h2{
+.menu-items h2 {
     color: rgb(46, 20, 16);
     font-family: 'Playfair Display', serif;
 }
 
-.items{
+.items {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(255, 240, 222);
-    width: 400px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 20px;
+    background-color: rgb(255, 233, 242);
+    width: 25rem;
+    padding-top: 1.875rem;
+    padding-bottom: 1.875rem;
+    padding-left: 1.25rem;
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
-    border: 5px solid rgb(46, 20, 16);
-    border-radius: 21px;
-    
+    border: 0.3125rem solid rgb(46, 20, 16);
+    border-radius: 1.3125rem;
 }
 
-.item-name{
+.item-name {
     font-weight: bold;
     text-decoration: solid;
 }
 
-.item-price{
-    padding-bottom: 10px;
+.item-price {
+    padding-bottom: 0.625rem;
 }
 
-.items:hover{
+.items:hover {
     background-color: rgb(46, 20, 16);
-    color: rgb(255, 240, 222);
+    color: rgb(255, 233, 242);
 }
 
-
-.owner-heading{
+.owner-heading {
     font-family: 'Great Vibes', cursive;
-    font-size: 70px;
+    font-size: 4.375rem;
     text-align: center;
     color: rgb(46, 20, 16);
 }
 
-
 .Halay, .Haroon {
     display: flex;
     align-items: center;
-    gap: 20px;
-    margin: 40px 0; 
+    gap: 0.4375rem;
+    margin: 2.5rem 0;
 }
 
 .Halay {
@@ -178,264 +158,158 @@ html {
 
 .Halay img, .Haroon img {
     border-radius: 50%;
-    box-shadow: 1px 2px 15px 1px #000000;
+    box-shadow: 0.0625rem 0.125rem 0.9375rem 0.0625rem #000000;
+    margin-right: 6.25rem;
+    margin-left: 6.25rem;
 }
 
 .msg {
-    background-color: rgb(255, 240, 222);
     font-family: 'Lato', sans-serif;
     color: rgb(46, 20, 16);
     font-style: italic;
     font-weight: bold;
-    word-spacing: 5px;
-    width: 500px;
-    padding: 25px;
-    border-radius: 16px;
-    box-shadow: 1px 1px 4px 0px #000000;
-    animation: flip-in-ver-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
+    word-spacing: 0.625rem;
+    width: 31.25rem;
 }
 
-
-.contact p{
+.contact p {
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     text-align: center;
-    word-spacing: 5px;
+    word-spacing: 0.3125rem;
+    margin-right: 6.25rem;
+    margin-left: 6.25rem;
 }
-
 
 .icon-row {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
-    margin-top: 15px;
+    gap: 0.625rem;
+    margin-top: 0.9375rem;
     font-family: 'Playfair Display', serif;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: rgb(46, 20, 16);
 }
+
 .icon-row i {
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
-.icon h3{
+.icon h3 {
     color: rgb(46, 20, 16);
     font-family: 'Playfair Display', serif;
 }
 
-.icon-sub{
+.icon-sub {
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-size: 0.9375rem;
     text-align: center;
-    word-spacing: 5px;
-
+    word-spacing: 0.3125rem;
 }
 
 footer {
-  text-align: center;
-  padding: 20px;
-  background-color: rgb(46, 20, 16);
-  color: #FFD9DA;
-  font-family: 'Lato', sans-serif;
+    text-align: center;
+    padding: 1.25rem;
+    background-color: rgb(46, 20, 16);
+    color: #ffe7e8;
+    font-family: 'Lato', sans-serif;
 }
 
-
-
-/* ----------------------------------------------
- * Generated by Animista on 2025-6-29 20:32:43
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation tracking-in-expand-fwd
- * ----------------------------------------
- */
-@-webkit-keyframes tracking-in-expand-fwd {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px);
-            transform: translateZ(-700px);
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    opacity: 1;
-  }
+footer p {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.25rem;
 }
+
+/* Animations */
 @keyframes tracking-in-expand-fwd {
-  0% {
-    letter-spacing: -0.5em;
-    -webkit-transform: translateZ(-700px);
-            transform: translateZ(-700px);
-    opacity: 0;
-  }
-  40% {
-    opacity: 0.6;
-  }
-  100% {
-    -webkit-transform: translateZ(0);
-            transform: translateZ(0);
-    opacity: 1;
-  }
+    0% {
+        letter-spacing: -0.5em;
+        transform: translateZ(-43.75rem);
+        opacity: 0;
+    }
+    40% {
+        opacity: 0.6;
+    }
+    100% {
+        transform: translateZ(0);
+        opacity: 1;
+    }
 }
 
-
-/* ----------------------------------------------
- * Generated by Animista on 2025-6-29 20:34:45
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation fade-in
- * ----------------------------------------
- */
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-/* ----------------------------------------------
- * Generated by Animista on 2025-6-29 20:37:15
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
-
-/**
- * ----------------------------------------
- * animation heartbeat
- * ----------------------------------------
- */
-@-webkit-keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
-  }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
-  }
-}
 @keyframes heartbeat {
-  from {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transform-origin: center center;
-            transform-origin: center center;
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+    from {
+        transform: scale(1);
+        transform-origin: center center;
+        animation-timing-function: ease-out;
+    }
+    10% {
+        transform: scale(0.91);
+        animation-timing-function: ease-in;
+    }
+    17% {
+        transform: scale(0.98);
+        animation-timing-function: ease-out;
+    }
+    33% {
+        transform: scale(0.87);
+        animation-timing-function: ease-in;
+    }
+    45% {
+        transform: scale(1);
+        animation-timing-function: ease-out;
+    }
+}
+
+@keyframes myAnim {
+    0% {
+        opacity: 0;
+        transform: rotateX(70deg);
+        transform-origin: top;
+    }
+    100% {
+        opacity: 1;
+        transform: rotateX(0deg);
+        transform-origin: top;
+    }
+}
+
+
+@media (max-width: 768px) {
+  .Top-Section {
+    flex-direction: column;
+    align-items: center;
   }
-  10% {
-    -webkit-transform: scale(0.91);
-            transform: scale(0.91);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+
+  .Intro{
+    padding-bottom: 4rem;
   }
-  17% {
-    -webkit-transform: scale(0.98);
-            transform: scale(0.98);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+
+  .heading{
+    padding-top: 4rem;
   }
-  33% {
-    -webkit-transform: scale(0.87);
-            transform: scale(0.87);
-    -webkit-animation-timing-function: ease-in;
-            animation-timing-function: ease-in;
+
+  .heading, .owner-heading {
+    font-size: 3.5rem;
   }
-  45% {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-animation-timing-function: ease-out;
-            animation-timing-function: ease-out;
+
+  .Intro, .items, .msg {
+    width: 90%;
+  }
+
+  .Halay, .Haroon {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .Halay img, .Haroon img {
+    margin: 0;
   }
 }
 
-/* ----------------------------------------------
- * Generated by Animista on 2025-6-29 20:39:11
- * Licensed under FreeBSD License.
- * See http://animista.net/license for more info. 
- * w: http://animista.net, t: @cssanimista
- * ---------------------------------------------- */
 
-/**
- * ----------------------------------------
- * animation flip-in-ver-right
- * ----------------------------------------
- */
-@-webkit-keyframes flip-in-ver-right {
-  0% {
-    -webkit-transform: rotateY(-80deg);
-            transform: rotateY(-80deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-    opacity: 1;
-  }
-}
-@keyframes flip-in-ver-right {
-  0% {
-    -webkit-transform: rotateY(-80deg);
-            transform: rotateY(-80deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0);
-            transform: rotateY(0);
-    opacity: 1;
-  }
-}
 
 
 
