--- a/style.css
+++ b/style.css
@@ -176,10 +176,11 @@ html {
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
     font-size: 1.125rem;
+    font-weight: bold;
     text-align: center;
-    word-spacing: 0.3125rem;
-    margin-right: 6.25rem;
-    margin-left: 6.25rem;
+    word-spacing: 0.625rem;
+    width: 31.25rem;
+
 }
 
 .icon-row {
@@ -284,7 +285,7 @@ footer p {
   }
 
   .Intro{
-    padding-bottom: 6rem;
+    padding-bottom: 6.5rem;
   }
 
   .heading{
@@ -295,7 +296,7 @@ footer p {
     font-size: 3.5rem;
   }
 
-  .Intro, .items, .msg {
+  .Intro, .items, .msg, .contact p{
     width: 90%;
   }
 
@@ -308,13 +309,7 @@ footer p {
     margin: 0;
   }
 
-  .contact p{
-    font-weight: bold;
-    word-spacing: 0.25rem;
-    width: 10.625rem;
-  }
-
-  .navbar a:hover h2 {
+  .navbar a:hover{
     text-decoration: underline;
 }
 
