--- a/style.css
+++ b/style.css
@@ -175,8 +175,8 @@ html {
 .contact p {
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
-    font-size: 1.125rem;
     font-weight: bold;
+    text-align: center;
     word-spacing: 0.625rem;
     width: 31.25rem;
 
@@ -284,7 +284,7 @@ footer p {
   }
 
   .Intro{
-    padding-bottom: 6.5rem;
+    padding-bottom: 7.25rem;
   }
 
   .heading{
