--- a/style.css
+++ b/style.css
@@ -175,9 +175,11 @@ html {
 .contact p {
     color: rgb(46, 20, 16);
     font-family: 'Lato', sans-serif;
+    font-size: 1.125rem;
     font-weight: bold;
     text-align: center;
     word-spacing: 0.625rem;
+    margin: 0;
     width: 31.25rem;
 
 }
