--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ html {
     font-weight: bold;
     text-align: center;
     word-spacing: 0.625rem;
-    margin: 0;
+    margin: 0 auto;
     width: 31.25rem;
 
 }
